Fixes #25 - Add the ability to show passwords as QR codes for easier use on mobile

--- a/data/panel/panel.less
+++ b/data/panel/panel.less
@@ -310,6 +310,11 @@ a:hover
   background-image: url(../images/ios-refresh-empty.svg);
 }
 
+.show-qrcode-link
+{
+  background-image: url(../images/ios-barcode-outline.svg);
+}
+
 .password-remove-link
 {
   background-image: url(../images/ios-close-outline.svg);
@@ -412,4 +417,11 @@ a:hover
 #password-length-value
 {
   min-width: 3ch;
+}
+
+#qrcode-canvas
+{
+  width: 400px;
+  height: 400px;
+  align-self: center;
 }
